Add spacing before the bracket in css file

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,44 +1,45 @@
-html{
+html {
   background-color: #f2f1ed;
   font-family: Georgia, serif;
   line-height: 1.5;
 }
 
-img{
+img {
   width: 100%;
 }
 
-h1, h2{
+h1, h2 {
   color: #5d8432;
-  font-family: 'Patua One', sans-serif;
+  font-family: "Patua One", sans-serif;
   text-transform: uppercase;
 }
 
-figcaption{
+figcaption {
   font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
-nav{
+nav {
   font-size: 1.125rem;
+  font-family: Georgia, serif;
   font-weight: bold;
 }
 
-nav ol{
+nav ol {
   list-style-type: none;
 }
 
-nav a{
+nav a {
   color: #793284;
   text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
   color: #b42885;
   text-decoration: underline;
 }
 
-.intro{
+.intro {
   font-size: 1rem;
 }
